[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ultra-heap-impl"
version = "1.0.0"
description = "Ultra min-heap and max-heap implementation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/raccoonette/ultra-heap-impl"
